src/components/TshirtsComp/tshirtsComp.css
.home-t-shirts {
    position: relative;
    top: 60px;

}

.home-t-shirts-container {
    padding-bottom: 60px;
}

.home-t-shirts-images-header {
    width: 100%;
    height: 320px;
    display: flex;
    justify-content: center;
    position: relative;
    background: linear-gradient(53deg, rgba(248,117,65,1) 20%, rgba(180,179,174,1) 70%);
    z-index: 2;
}



.home-image-t-shirt {
    object-fit: scale-down;
    width: 400px;
    height: 250px;
    position: relative;
    z-index: 2;

}

.home-t-shirts-image-container {
    height: 300px;
    width: 280px;
    display: flex;
    justify-content: center;
    padding-top: 15px;
}

.home-t-shirts-image-container::after {
    content: "";
    position: absolute;
    background-color: white;
    height: 50px;
    width: 100%;
    bottom: -5px;
    left: 0;
    filter: blur(4px);
    z-index: 0;
}

.home-t-shirts-products-container {
    padding-left: 20px;
    padding-right: 20px;
}


.home-t-shirts-title-container {
    margin-left: 60px;
}

.home-t-shirts-heading {
    font-size: 34px;
    margin-bottom: 10px;
}

.home-t-shirts-count {
    color: rgb(100, 100, 100);
    font-size: 22px;
    margin-top: 0;
    font-weight: 500;
}

.home-t-shirts-sort-filter-container {
    display: flex;
    align-items: end;
    width: 380px;
    justify-content: space-between;
    margin-left: 60px;

}

.btn-filter {
    border: none;
    border-bottom: 1px solid rgb(50, 50, 50);
    background-color: transparent;
    width: 150px;
    text-align: start;
    letter-spacing: 1px;
}

.sort-container {
    width: 200px;
}

.form-select {
    border: none;
    border-bottom: 1px solid rgb(50, 50, 50);
    padding-left: 0;
    border-radius: 0
}

.home-t-shirts-products-grid-container {
    margin-top: 40px;
    display: grid;
    justify-content: center;
    grid-template-columns: 300px 300px 300px 300px;
    column-gap: 20px;
    row-gap: 20px;
    padding-left: 20px;
    padding-right: 20px;
    margin: 60px;
}

.home-t-shirts-products-grid-container-mobile {
    display: none;
    margin-top: 40px;
    justify-content: center;
    grid-template-columns: 300px 300px 300px 300px;
    column-gap: 20px;
    row-gap: 20px;
    padding-left: 20px;
    padding-right: 20px;
    margin: 60px;
}

.card {
    width: 300px;
    border: 2px solid rgb(60, 60, 60);
    border-radius: 10px;
    cursor: pointer;
    position: relative;
}

.card:hover {
    transform: scale(1.05);
    transition: transform 0.1s ease-out;
    background-color: rgb(230, 230, 230);
}






.heart-icon {
    margin-top: 16px;
    margin-left: 254px;
}

.heart-icon:hover {
    fill: red;
}



.card-img-top {
    width: 300px;
    height: 200px;
    object-fit: scale-down;
}

.card-body {
    position: relative;
    height: 200px;
}

.card-body::after {
    content: '';
    width: 260px;
    height: 1px;
    background-color: rgb(50, 50, 50);
    position: absolute;
    top: 0;
    left: 20px;
}



.card-title {
    font-size: 16px;
    color: rgb(100, 100, 100);
    font-weight: 500;
}

.card-price {
    font-size: 16px;
    color: rgb(50, 50, 50);
    font-weight: 600;

}

#old-price {
    text-decoration: line-through;
}



.add-btn {
    text-decoration: none;
    color: rgb(50, 50, 50);
    font-weight: 600;
    border: 1px solid black;
    padding: 5px 10px 5px 10px;
    border-radius: 8px;
    cursor: pointer;
    position: absolute;
    bottom: 16px;
    left: 16px;
}

.add-btn:hover,
.filters-btn:hover,
.load-more-btn:hover {
    color: white;
    background-color: rgb(50, 50, 50);
}

.filters-btn {
    color: rgb(50, 50, 50);
    font-weight: 600;
    border: none;
    border-radius: 8px;
    cursor: pointer;
    margin-top: 8px;
    margin-bottom: 8px;
    margin-left: 16px;
    padding: 2px 6px 2px 6px;
}



#no-more-products-span,
#no-more-products-span-mobile {
    color: rgb(50, 50, 50);
    font-weight: 600;
    font-size: 26px;
    display: block;
    text-align: center;
    margin-bottom: 20px;
}

#no-more-products-span-mobile {
    display: none;
}

.load-more-btn-container,
.load-more-btn-container-mobile {
    width: 110px;
    margin-left: auto;
    margin-right: auto;
}

.load-more-btn-container-mobile {
    display: none;
}

.load-more-btn {
    color: rgb(50, 50, 50);
    font-weight: 600;
    border: 1px solid black;
    padding: 5px 10px 5px 10px;
    border-radius: 8px;
    cursor: pointer;

}

.load-more-btn:disabled {
    background-color: rgb(200, 200, 200);
    color: white;

}

.load-more-btn:disabled:hover {
    color: white;

}

@media screen and (max-width:1350px) {


    .home-t-shirts-products-grid-container {
        grid-template-columns: 260px 260px 260px 260px;
    }

    .card {
        width: 260px;

    }

    .heart-icon {
        margin-left: 214px;
    }

    .card-img-top {
        width: 260px;
        height: 180px;
    }

    .card-body {
        height: 180px;
    }

    .card-body::after {
        width: 220px;
    }

    .card-brand {
        font-size: 20px;
    }

    .card-title,
    .card-price {
        font-size: 14px;
    }

    .add-btn {
        padding: 3px 8px 3px 8px;
        font-size: 14px;
    }

}


@media screen and (max-width:1150px) {


    .home-t-shirts-products-grid-container {
        grid-template-columns: 230px 230px 230px 230px;
    }

    .card {
        width: 230px;

    }

    .heart-icon {
        margin-left: 184px;
        width: 26px;
        height: 26px;
    }

    .card-img-top {
        width: 230px;
        height: 180px;
    }

    .card-body {
        height: 180px;
    }

    .card-body::after {
        width: 190px;
    }

    .card-brand {
        font-size: 18px;
    }

    .card-title,
    .card-price {
        font-size: 12px;
    }

    .add-btn {
        padding: 2px 7px 2px 7px;
        font-size: 12px;
    }


}
/* ... */

